2013-10-19  Vladimir Serbinenko  <phcoder@gmail.com>

	Lift 255x255 erminal sie restriction to 65535x65535. Also change from
	bitmasks to small structures of size chosen to fit in registers.

2013-10-19  Vladimir Serbinenko  <phcoder@gmail.com>

	* conf/Makefile.common: Use -freg-struct-return on i386. This
	decreases code size and improves performance.

2013-10-19  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/osdep/unix/exec.c: Fix compilation error on emu.

2013-10-19  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/kern/misc.c (grub_vsnprintf_real): Fix formatting of
	"(null)" string.
	Simplify expressions to save around 256 bytes in kernel.img.
	* tests/printf_unit_test.c (printf_test): Add "(null)" tests.

2013-10-19  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/tests/video_checksum.c (grub_video_capture_write_bmp):
	Use GRUB_UTIL_FD_O_* rather than O_*.

2013-10-19  Vladimir Serbinenko  <phcoder@gmail.com>

	Add haiku-specific functions.

2013-10-19  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/kern/emu/hostdisk.c: Remove few leftover includes.

2013-10-19  Vladimir Serbinenko  <phcoder@gmail.com>

	Move stat () and device mode checking into OS-dependent files as
	long as performance doesn't suffer.

2013-10-19  Vladimir Serbinenko  <phcoder@gmail.com>

	Split make_system_path_relative_to_its_root into separate file
	relpath.c from getroot.c as it's common between unix and haiku
	but otherwise haiku doesn't use any functions from unix getroot.c.

2013-10-19  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/osdep/aros/hostdisk.c (grub_util_is_directory):
	New function.
	(grub_util_is_special_file): Likewise.

2013-10-19  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/osdep/unix/getroot.c: Move exec functions to ...
	* osdep/unix/exec.c: ... here. Add few additional exec_* variants.

2013-10-19  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/lib/libgcrypt_wrap/cipher_wrap.h: Define size_t to