@@ -1,3 +1,9 @@
+2013-10-20  Vladimir Serbinenko  <phcoder@gmail.com>
+
+	* grub-core/fs/bfs.c: Remove variable length arrays. Reduces afs.mod and
+	bfs.mod size by 556 resp 740 bytes (288 resp 334 compressed).
+	* include/grub/types.h (grub_unaligned_uint64_t): New type.
+
 2013-10-19  Vladimir Serbinenko  <phcoder@gmail.com>
 
 	Lift 255x255 erminal sie restriction to 65535x65535. Also change from
